k8s-gateway-api-vbeta/hello-hostname-api/hello-hostname-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-hostname-api
  labels:
    app: hello-hostname-api
spec:
  selector:
    matchLabels:
      app: hello-hostname-api
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: hello-hostname-api
    spec:
      containers:
      - name: hello-hostname-api
        image: mvitor/hostname-golang-api:latest
        imagePullPolicy : Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-hostname-api-service
  labels:
    app: hello-hostname-api-service
spec:
  type: ClusterIP
  selector:
    app: hello-hostname-api
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
