k8s-gateway-api-vbeta/hello-hostname-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-hostname-api
  namespace: default
 
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /greet/hello
        pathType: Prefix
        backend:
          service:
            name: hello-hostname-api-service
            port:
              number: 80
